# basic-coverage-example

./: .bazeliskrc  .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  lib.hpp
test/: BUILD.bazel  lib_test.cpp
