workspace(name = "coverage-example")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

TOOLCHAINS_LLVM_COMMIT = "4ab573b1b87a57791ef2f9ccee71cbad80a2abb9"

http_archive(
    name = "toolchains_llvm",
    integrity = "sha256-sCbaVUYAogO0jJ8N8CY4DYNdJLVLV0Z3TiPMKl81f44=",
    strip_prefix = "toolchains_llvm-{commit}".format(
        commit = TOOLCHAINS_LLVM_COMMIT,
    ),
    url = "https://github.com/bazel-contrib/toolchains_llvm/archive/{commit}.tar.gz".format(
        commit = TOOLCHAINS_LLVM_COMMIT,
    ),
)

load("@toolchains_llvm//toolchain:deps.bzl", "bazel_toolchain_dependencies")

bazel_toolchain_dependencies()

load("@toolchains_llvm//toolchain:rules.bzl", "llvm_toolchain")

llvm_toolchain(
    name = "llvm18_toolchain",
    cxx_flags = {
        "": [
            "-D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE",
            "-stdlib=libc++",
            "-std=c++23",
            # https://github.com/bazelbuild/bazel/issues/14970#issuecomment-1894565761
            "-ffile-compilation-dir=.",
        ],
    },
    llvm_version = "18.1.8",
)

load("@llvm18_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()
